--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,21 +7,27 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
-## [0.6.0] - 2023-11-01
-
-### TODO
+### Changed
+- Rebuilt server from the ground up
 
 ## [0.5.0] - 2014-10-03
-b94cb957a3e439f3d9f7f94852e11078a690dfb2
-### Changed
-
-## [0.4.0] - 
-18b4437b4978c2bd5c5deb6d86c67de02d359a7b
-### Changed
-
 
 ### Added
+- Frontend dependency injection and management
 
+### Changed
+- Rebuilt client code from the ground up
+
+## [0.4.0] - 2014-03-08
+
+### Added
+- Scenograph class for loading, updating and unloading scenes
+
+### Changed
+- Client works without server
+
+### Removed
+- Server shelved due to lack of funding for infrastructure
 
 ## [0.3.0] - 2014-02-25
 5ab2d332693130e8760a3a3ae95303058bc74fe1
@@ -50,8 +56,8 @@ b94cb957a3e439f3d9f7f94852e11078a690dfb2
 - Initial technical demo
 - Proof of concept client/server gameplay
 
-[0.6.0]: https://github.com/OpenStudiosCo/Langenium/compare/...
-[0.5.0]: https://github.com/OpenStudiosCo/Langenium/compare/...
+
+[0.5.0]: https://github.com/OpenStudiosCo/Langenium/compare/18b4437b4978c2bd5c5deb6d86c67de02d359a7b...b94cb957a3e439f3d9f7f94852e11078a690dfb2
 [0.4.0]: https://github.com/OpenStudiosCo/Langenium/compare/5ab2d332693130e8760a3a3ae95303058bc74fe1...18b4437b4978c2bd5c5deb6d86c67de02d359a7b
 [0.3.0]: https://github.com/OpenStudiosCo/Langenium/compare/49f92cc15aeca73ba605648d5aca03ac5aa39fd6...5ab2d332693130e8760a3a3ae95303058bc74fe1
 [0.2.0]: https://github.com/OpenStudiosCo/Langenium/compare/f211712fbb4176ca7f1d413e0547c91f655aee72...49f92cc15aeca73ba605648d5aca03ac5aa39fd6
